# pvr.ultimate

./: CMakeLists.txt  FindRapidJSON.cmake  README.md
.github/workflows/: android-build.yml  build.yml
depends/common/rapidjson/: flags.txt  rapidjson.sha256  rapidjson.txt
pvr.ultimate/: addon.xml  addon.xml.in
pvr.ultimate/resources/: settings.xml
pvr.ultimate/resources/language/resource.language.en_gb/: strings.po
src/: ChannelManager.cpp  ChannelManager.h  EPGManager.cpp  EPGManager.h  Models.h  PVRUltimate.cpp  PVRUltimate.h  ProviderManager.cpp  ProviderManager.h  RecordingManager.cpp  RecordingManager.h  TimerManager.cpp  TimerManager.h  Utils.cpp  Utils.h
